
2006-10-12 cjg
 * Removed GEO IP code from Apache/LogHandler - this will be handled 
    in the batch script.

2006-10-12 tdb
 * test_pod script checks for presence of POD for public methods in
    EPrints modules
 * Added missing POD in TempDir

2006-10-12 cjg
 * Added labels to the refereed field.

2006-10-12 cjg
 * Fixed bug in render multifield component which caused the title to
    vanish when uncollapsing.
 * Made top of default surround a bit darker to look more like the top
    of window.
 * Made the text in the surround title bar bigger and bold
 * Made the collapsed bar look like the title bar.

2006-10-12 moj
 * Added namespaces throughout lib

2006-10-12 cjg 
 * Added some warnings when XML functions are passed undefined nodes.
 * Moved document type guesser into cfg.d/document_upload.pl
 * Fixed a couple of namespace change issues

2006-10-12 cjg 
 * Fixing some knock on effects from namespacing the XML files.
 * Phrases now use collapse to insert their pins.
 * Changes the margins on the surround css.
 * Removed a stray collapse option from the subjects input component
    in the default workflow.
 * Added a little padding to the top of the tabs 

2006-10-12 cjg
 * Added citation function to epscript
 * Added yesno function to epscript

2006-10-12 cjg
 * Added a new input_style to set which shows the items as a short list
    of radio buttons.
 * Made most sets use this input style.

2006-10-13 cjg
 * Fixed bug in render-set-long
 * Added xml tidy to pins so that we can debug the HTML. This needs to
    become a config option.
 * Show/Hide of help, subjects and collapsed components now uses animation.
 * Help for multiple components is now inlined into the table.
 * Moved js files around so they load in the right order.
 * Put dotted lines between elements in multi-component.
 * Removed the "may be ommited" text from date input.

2006-10-13 cjg
 * Added warning on running scripts as root.